add style&info to infowindow. clickable phone & address. todo: listview and responsive mapBounds.

--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,13 @@ html, body {
 #map {
   height: 100%;
 }
+
+/* yelp info windows*/
+#content {
+  font-size: 14px;
+}
+
+#yelp-img {
+  float: left;
+  padding: 10px; 
+}
