--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,65 @@
-html, body {
-  font-size: 14px;
-  height: 100%;
-  margin: 0;
-  padding-top: 25px;
+html,
+body {
+    font-size: 14px;
+    height: 100%;
+    margin: 0;
+    padding-top: 25px;
 }
+/*****nav bar hamburger button*******/
 
-
-
-/*nav bar hamburger button*/
 .hamburger-icon {
-  margin: 8px 5px 5px 10px;
-  color: #fff;
-  background-color: #AD2324; //red
-  border-color: white;
+    margin: 8px 5px 5px 10px;
+    color: #fff;
+    background-color: #AD2324; //red
+    border-color: white;
 }
 .hamburger-icon:hover {
-  background-color: #0CBB06; //lightsaber green
+    background-color: #0CBB06; //lightsaber green
 }
-
-
 #map {
-  height: 100%;
+    height: 100%;
 }
-
 /*help from: http://stackoverflow.com/questions/6738145/google-maps-v3-change-size-of-infowindow */
+
 .gm-style-iw {
-  width: 324px !important;
-  height: 220px !important;
+    width: 324px !important;
+    height: 220px !important;
 }
+/****** yelp info windows*******/
 
-
-/* yelp info windows*/
 #content {
-  font-size: 14px;
+    font-size: 14px;
 }
 #placeName {
-  font-size: 20px;
-  margin-bottom: 2px;
+    font-size: 20px;
+    margin-bottom: 2px;
 }
 #yelp-img {
-  float: left;
-  padding: 8px;
+    float: left;
+    padding: 8px;
 }
+/******Sidebar*******/
 
-
-/*Sidebar*/
 #list-sidebar {
     background-color: black;
     min-width: 255px;
 }
-
 a {
     text-align: center !important;
     color: #AD2324 !important;
     line-height: 0.9;
     cursor: pointer;
 }
-
 /*added to clicked <li> on list view */
+
 .clickedYelp {
-  font-weight: bold;
-  font-size: 1.3em;
-  color: #0CBB06 !important;
+    font-weight: bold;
+    font-size: 1.3em;
+    color: #0CBB06 !important;
 }
-
-
+/****** Media Query*****/
 @media screen and (max-width: 767px) {
     body {
-      padding-top: 100px;
+        padding-top: 100px;
     }
 }
